# plonky2-smt

./: Cargo.toml  README.md
src/: circuit.rs  main.rs  smt.rs
